skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_empty.snap
---
source: tests/snapshot_overview.rs
expression: "render_fixture(\"empty\")"
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-empty  ·  Master pi at /repo/demo  ·  daemon: file-mode  ·  uptime 10m  ·  Adhoc 0 · Issue 0 · Workflow 0  ·  7m old · stale  $0.00 · 0 turns · in 0 / out 0        moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Live feed │ Conversations │ Decisions │ Costs │ Daemon                                                                                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ left rail ───────────────┐┌ sessions (0 tracked) ────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ detail ──────────────────────────────────┐"
"│Status                    ││Kind    State            Harness    Title          Cost           PR/worktree    Age      Decision                Activity    ││No session selected                       │"
"│no tracked entries        ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│Merge queue               ││                                                                                                                              ││                                          │"
"│empty                     ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│Conflicts                 ││                                                                                                                              ││                                          │"
"│no edges                  ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   D prune   g focus   / filter   ⇧M compact   ? help   q quit                                                                       noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
